--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-cats",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://torianos.github.io/reactcat/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -14,6 +15,7 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
